# Copyright (c) 2016, the Dart project authors.  Please see the AUTHORS file
# for details. All rights reserved. Use of this source code is governed by a
# BSD-style license that can be found in the LICENSE file.

import("//build/dart/dart_package.gni")
import("//build/dart/dart_tool.gni")

dart_package("analysis_server") {
  package_name = "analysis_server"

  disable_analysis = true

  deps = [
    "//dart/pkg/analyzer",
    "//dart/pkg/telemetry",
    "//dart/third_party/pkg/linter",
    "//third_party/dart-pkg/pub/args",
    "//third_party/dart-pkg/pub/dart_style",
    "//third_party/dart-pkg/pub/intl",
    "//third_party/dart-pkg/pub/isolate",
    "//third_party/dart-pkg/pub/logging",
    "//third_party/dart-pkg/pub/package_config",
    "//third_party/dart-pkg/pub/path",
    "//third_party/dart-pkg/pub/plugin",
    "//third_party/dart-pkg/pub/usage",
    "//third_party/dart-pkg/pub/watcher",
    "//third_party/dart-pkg/pub/yaml",
  ]
}

dart_tool("analysis_server_bin") {
  main_dart = "bin/server.dart"

  disable_analysis = true

  deps = [
    ":analysis_server",
    "//dart/pkg/analyzer_plugin",
  ]
}
