# Copyright (c) 2016, the Dart project authors.  Please see the AUTHORS file
# for details. All rights reserved. Use of this source code is governed by a
# BSD-style license that can be found in the LICENSE file.

import("//build/dart/dart_package.gni")

dart_package("analyzer") {
  package_name = "analyzer"

  source_dir = "lib"

  deps = [
    "//dart/pkg/front_end",
    "//third_party/dart-pkg/pub/args",
    "//third_party/dart-pkg/pub/charcode",
    "//third_party/dart-pkg/pub/crypto",
    "//third_party/dart-pkg/pub/glob",
    "//third_party/dart-pkg/pub/html",
    "//third_party/dart-pkg/pub/isolate",
    "//third_party/dart-pkg/pub/meta",
    "//third_party/dart-pkg/pub/package_config",
    "//third_party/dart-pkg/pub/path",
    "//third_party/dart-pkg/pub/plugin",
    "//third_party/dart-pkg/pub/watcher",
    "//third_party/dart-pkg/pub/yaml",
  ]
}
