# Copyright (c) 2016, the Dart project authors.  Please see the AUTHORS file
# for details. All rights reserved. Use of this source code is governed by a
# BSD-style license that can be found in the LICENSE file.

import("//build/dart/dart_package.gni")

dart_package("analyzer_cli") {
  package_name = "analyzer_cli"

  disable_analysis = true

  deps = [
    "//dart/pkg/analyzer",
    "//dart/pkg/telemetry",
    "//dart/third_party/pkg/linter",
    "//third_party/dart-pkg/pub/args",
    "//third_party/dart-pkg/pub/bazel_worker",
    "//third_party/dart-pkg/pub/cli_util",
    "//third_party/dart-pkg/pub/package_config",
    "//third_party/dart-pkg/pub/plugin",
    "//third_party/dart-pkg/pub/protobuf",
    "//third_party/dart-pkg/pub/yaml",
  ]
}
