# Copyright (c) 2017, the Dart project authors.  Please see the AUTHORS file
# for details. All rights reserved. Use of this source code is governed by a
# BSD-style license that can be found in the LICENSE file.

import("//build/dart/dart_package.gni")

dart_package("analyzer_plugin") {
  package_name = "analyzer_plugin"

  disable_analysis = true

  deps = [
    "//dart/pkg/analyzer",
    "//third_party/dart-pkg/pub/html",
    "//third_party/dart-pkg/pub/path",
  ]
}
