# Copyright (c) 2017, the Dart project authors.  Please see the AUTHORS file
# for details. All rights reserved. Use of this source code is governed by a
# BSD-style license that can be found in the LICENSE file.

import("//build/dart/dart_package.gni")

dart_package("telemetry") {
  package_name = "telemetry"

  disable_analysis = true

  deps = [
    "//third_party/dart-pkg/pub/http",
    "//third_party/dart-pkg/pub/path",
    "//third_party/dart-pkg/pub/stack_trace",
    "//third_party/dart-pkg/pub/usage",
  ]
}
