# Copyright (c) 2017, the Dart project authors.  Please see the AUTHORS file
# for details. All rights reserved. Use of this source code is governed by a
# BSD-style license that can be found in the LICENSE file.

# This file contains all sources for the dart:async library.
async_runtime_sources = [
  "async_patch.dart",
  "deferred_load_patch.dart",
  "schedule_microtask_patch.dart",
  "timer_patch.dart",
  "async.cc",
]
