# Copyright (c) 2017, the Dart project authors.  Please see the AUTHORS file
# for details. All rights reserved. Use of this source code is governed by a
# BSD-style license that can be found in the LICENSE file.

collection_runtime_cc_files = [ "linked_hash_map.cc" ]

collection_runtime_dart_files = [
  # collection_patch.dart needs to be the first dart file because it contains
  # imports.
  "collection_patch.dart",
  "compact_hash.dart",
]

collection_runtime_sources =
    collection_runtime_cc_files + collection_runtime_dart_files
