# Copyright (c) 2017, the Dart project authors.  Please see the AUTHORS file
# for details. All rights reserved. Use of this source code is governed by a
# BSD-style license that can be found in the LICENSE file.

# Sources visible via default library.

core_runtime_cc_files = [
  "array.cc",
  "bool.cc",
  "date.cc",
  "double.cc",
  "errors.cc",
  "function.cc",
  "growable_array.cc",
  "identical.cc",
  "integers.cc",
  "invocation_mirror.h",
  "object.cc",
  "regexp.cc",
  "stacktrace.cc",
  "stacktrace.h",
  "stopwatch.cc",
  "string.cc",
  "uri.cc",
  "weak_property.cc",
]
